--- a/git-test1/.project
+++ b/git-test1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>employees1</name>
+	<name>employees</name>
 	<comment></comment>
 	<projects>
 	</projects>
